--- a/src/pages/wild-chess-simulator/introduction/roadmap.astro
+++ b/src/pages/wild-chess-simulator/introduction/roadmap.astro
@@ -7,15 +7,20 @@ export let futureRoadmapElements = [
   {
     titleText: "Publish, Maybe?",
     descText: "",
-    dateText: "28 / 06 / 2023",
+    dateText: "?? / ?? / 2023",
   },
   {
     titleText: "Working Prototype",
     descText: "",
-    dateText: "10 / 06 / 2023",
+    dateText: "25 / 05 / 2023",
   },
   {
-    titleText: "Auto Battler Polish",
+    titleText: "Focus - Simulation Section",
+    descText: "",
+    dateText: "17 / 05 / 2023",
+  },
+  {
+    titleText: "Focus - Node Map Section",
     descText: "",
     dateText: "10 / 05 / 2023",
   },
