--- a/src/components/HeadCommon.astro
+++ b/src/components/HeadCommon.astro
@@ -1,6 +1,6 @@
 ---
-import '../styles/theme.css';
-import '../styles/index.css';
+import "../styles/theme.css";
+import "../styles/index.css";
 ---
 
 <!-- Global Metadata -->
@@ -15,18 +15,15 @@ import '../styles/index.css';
 <!-- Preload Fonts -->
 <link rel="preconnect" href="https://fonts.googleapis.com" />
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-<link
-	href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital@0;1&display=swap"
-	rel="stylesheet"
-/>
+<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital@0;1&display=swap" rel="stylesheet" />
 
 <!-- Scrollable a11y code helper -->
 <script src="/make-scrollable-code-focusable.js" is:inline></script>
 
 <!-- This is intentionally inlined to avoid FOUC -->
 <script is:inline>
-	const root = document.documentElement;
-	const theme = localStorage.getItem('theme');
+  const root = document.documentElement;
+  const theme = localStorage.getItem("theme");
 </script>
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -36,4 +33,5 @@ import '../styles/index.css';
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
   gtag('config', 'G-TEL60V1WM9');
-</script> -->
+</script> 
+-->
