--- a/src/components/PageContent/PageObjectGrid.astro
+++ b/src/components/PageContent/PageObjectGrid.astro
@@ -50,7 +50,7 @@ function filterGrid(totalArray: ObjectDataJSONArray[], currentValue: ObjectDataJ
   id="entity-grid-search"
   class="entity-grid-search"
   oninput="searchFilterText()"
-  placeholder="Search for entities/classes/origins..."
+  placeholder="Search for objects/types/origins..."
   size="40"
 />
 <section class="cms-nav">
