--- a/src/components/PageContent/PageOriginGrid.astro
+++ b/src/components/PageContent/PageOriginGrid.astro
@@ -44,7 +44,7 @@ function filterGrid(totalArray: OriginDataJSONArray[], currentValue: OriginDataJ
   id="entity-grid-search"
   class="entity-grid-search"
   oninput="searchFilterText()"
-  placeholder="Search for entities/classes/origins..."
+  placeholder="Search for origins..."
   size="40"
 />
 <section class="cms-nav">
