--- a/src/components/PageContent/PageSkillGrid.astro
+++ b/src/components/PageContent/PageSkillGrid.astro
@@ -49,7 +49,7 @@ function filterGrid(totalArray: SkillDataJSONArray[], currentValue: SkillDataJSO
   id="entity-grid-search"
   class="entity-grid-search"
   oninput="searchFilterText()"
-  placeholder="Search for entities/classes/origins..."
+  placeholder="Search for skills..."
   size="40"
 />
 <section class="cms-nav">
