--- a/src/pages/martech-game/index.astro
+++ b/src/pages/martech-game/index.astro
@@ -2,50 +2,92 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <title>MarTech | ATA</title>
+        <title>ATA | MarTech Game</title>
         <script
             src="https://cdn.socket.io/4.6.0/socket.io.min.js"
             integrity="sha384-c79GN5VsunZvi+Q/WObgk2in0CbZsHnjEqvFxC5DxHn9lTfNce2WW6h2pH6u/kF+"
             crossorigin="anonymous"></script>
         <script defer type="module" src="/martech-game.js"></script>
+        <link href="/dist/output.css" rel="stylesheet" />
     </head>
-    <body class="font-mono text-lg font-bold text-lightgray bg-darkgray">
+    <body style="overflow: hidden;" class="font-mono text-lg font-bold text-lightgray bg-darkgray">
         <div class="flex items-center justify-center w-screen h-screen">
             <div class="bg-dark w-1/5 h-5/6 border-dashed border-2 border-accentgray rounded-xl ml-5 min-w-min">
                 <div class="flex flex-col items-center pt-5 text-red">
-                    <b>Player Container</b>
+                    <b style="font-size: 1.25rem;">Player Container</b>
                 </div>
-                <div id="player-container" class="flex flex-col items-center gap-5 py-5"></div>
+                <div id="player-container" class="w-full flex flex-col justify-center items-center gap-5 py-5">
+                    <li
+                        style="visibility: hidden;"
+                        class="w-4/5 bg-darkgray flex justify-center items-center text-center outline outline-red rounded-lg p-2"
+                    >
+                        ? |<p class="text-green">&nbsp123</p>
+                        <p class="text-yellow">&nbsp123</p>
+                        <p class="text-red">&nbsp123</p>
+                    </li>
+                </div>
             </div>
             <div class="bg-darkgray w-3/5 h-screen min-w-fit">
                 <div class="flex flex-col h-screen justify-center items-center">
-                    <div id="notification-container" class="bg-dark rounded-b-xl w-3/4 h-32 flex flex-col h-screen gap-5 justify-center items-center">
+                    <div id="notification-container" class="bg-dark rounded-b-xl w-3/4 h-1/6 flex flex-col gap-5 justify-center items-center">
                         <input
                             id="player-input"
-                            placeholder="3 -> Name <- 20"
-                            class="rounded-md w-2/4 text-center bg-accentgray"
+                            placeholder="<playerName>"
+                            class="rounded-md w-2/4 h-1/3 text-center placeholder:italic placeholder:text-fadedgray bg-darkgray outline outline-1 outline-fadedgray focus:outline-red"
                             minlength="3"
+                            style="font-size: 1.25rem;"
                             autocomplete="off"
-                            maxlength="20"
+                            maxlength="16"
                             required
                         />
-                        <button id="play-button" class="w-1/6 rounded-md text-red">Play</button>
+                        <button id="play-button" class="w-1/6 rounded-md text-red" style="font-size: 1.25rem;">Play</button>
                     </div>
-                    <div id="word-container" class="w-3/5 h-4/6 flex flex-col justify-center items-center gap-5"></div>
+                    <div id="word-container" class="w-3/5 h-4/6 flex flex-col justify-center items-center gap-5">
+                        <button
+                            style="width:64px; height: 64px; font-size: 2rem; visibility: hidden;"
+                            class="bg-dark flex justify-center items-center outline outline-2 outline-offset-2 outline-accentgray antialiased"
+                            >?
+                        </button>
+                        <button
+                            style="width:64px; height: 64px; font-size: 2rem; visibility: hidden;"
+                            class="bg-green flex justify-center items-center outline outline-2 antialiased"
+                            >?
+                        </button>
+                        <button
+                            style="width:64px; height: 64px; font-size: 2rem; visibility: hidden;"
+                            class="bg-yellow flex justify-center items-center outline outline-2 antialiased"
+                            >?
+                        </button>
+                        <button
+                            style="width:64px; height: 64px; font-size: 2rem; visibility: hidden;"
+                            class="bg-red flex justify-center items-center outline outline-2 antialiased"
+                            >?
+                        </button>
+                    </div>
                     <hr
+                        id="panel-seperator"
                         style="border: 0;
+                        visibility: hidden;
                     height: 2px;
                     width:50%;
                     background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(100, 100, 100, 0.75), rgba(0, 0, 0, 0));"
                     />
-                    <div id="key-container" class="w-3/4 h-2/6 flex flex-wrap items-center justify-center gap-3 p-5 max-w-xl"></div>
+                    <div id="key-container" class="w-3/4 h-2/6 flex flex-wrap items-center justify-center gap-3 p-5 max-w-xl">
+                        <button
+                            style="width:54px; height: 54px; font-size: 1.5rem; visibility: hidden;"
+                            class="bg-dark outline outline-2 outline-accentgray rounded-lg antialiased"
+                            >?
+                        </button>
+                    </div>
                 </div>
             </div>
             <div class="bg-dark w-1/5 h-5/6 border-dashed border-2 border-accentgray rounded-xl mr-5 min-w-min">
                 <div class="flex flex-col items-center pt-5 text-red">
-                    <p>Server Container</p>
+                    <b style="font-size: 1.25rem;">Server Container</b>
                 </div>
-                <div id="server-container" class="h-full w-full flex flex-col items-center gap-5 p-5 text-center"></div>
+                <div id="server-container" class="h-full w-full flex flex-col items-center gap-5 p-5 text-center">
+                    <li style="visibility: hidden;" class="w-full list-none">?</li>
+                </div>
             </div>
         </div>
     </body>
