--- a/src/pages/martech-game/index.astro
+++ b/src/pages/martech-game/index.astro
@@ -12,7 +12,7 @@
     </head>
     <body style="overflow: hidden;" class="font-mono text-lg font-bold text-lightgray bg-darkgray">
         <div class="flex items-center justify-center w-screen h-screen">
-            <div class="bg-dark w-1/5 h-5/6 border-dashed border-2 border-accentgray rounded-xl ml-5 min-w-min">
+            <div class="bg-dark hidden xl:block w-2/5 h-5/6 border-dashed border-2 border-accentgray rounded-xl ml-5 min-w-min">
                 <div class="flex flex-col items-center pt-5 text-red">
                     <b style="font-size: 1.25rem;">Player Container</b>
                 </div>
@@ -27,22 +27,22 @@
                     </li>
                 </div>
             </div>
-            <div class="bg-darkgray w-3/5 h-screen min-w-fit">
+            <div class="bg-darkgray w-full h-screen min-w-fit">
                 <div class="flex flex-col h-screen justify-center items-center">
-                    <div id="notification-container" class="bg-dark rounded-b-xl w-3/4 h-1/6 flex flex-col gap-5 justify-center items-center">
+                    <div id="notification-container" class="bg-dark rounded-b-xl w-4/5 h-1/6 flex flex-col gap-5 justify-center items-center">
                         <input
                             id="player-input"
                             placeholder="<playerName>"
-                            class="rounded-md w-2/4 h-1/3 text-center placeholder:italic placeholder:text-fadedgray bg-darkgray outline outline-1 outline-fadedgray focus:outline-red"
                             minlength="3"
-                            style="font-size: 1.25rem;"
+                            style="font-size: 3rem;"
+                            class="rounded-xl w-3/4 h-1/3 text-center placeholder:italic placeholder:text-fadedgray bg-darkgray outline outline-2 outline-fadedgray focus:outline-red lg:text-base"
                             autocomplete="off"
-                            maxlength="16"
+                            maxlength="18"
                             required
                         />
-                        <button id="play-button" class="w-1/6 rounded-md text-red" style="font-size: 1.25rem;">Play</button>
+                        <button id="play-button" class="w-1/6 rounded-md text-red" style="font-size: 4rem;">Play</button>
                     </div>
-                    <div id="word-container" class="w-3/5 h-4/6 flex flex-col justify-center items-center gap-5">
+                    <div id="word-container" class="w-full h-4/6 flex flex-col justify-center items-center gap-5">
                         <button
                             style="width:64px; height: 64px; font-size: 2rem; visibility: hidden;"
                             class="bg-dark flex justify-center items-center outline outline-2 outline-offset-2 outline-accentgray antialiased"
@@ -72,7 +72,7 @@
                     width:50%;
                     background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(100, 100, 100, 0.75), rgba(0, 0, 0, 0));"
                     />
-                    <div id="key-container" class="w-3/4 h-2/6 flex flex-wrap items-center justify-center gap-3 p-5 max-w-xl">
+                    <div id="key-container" class="w-full h-2/6 flex flex-wrap items-center justify-center gap-3 p-5 max-w-xl">
                         <button
                             style="width:54px; height: 54px; font-size: 1.5rem; visibility: hidden;"
                             class="bg-dark outline outline-2 outline-accentgray rounded-lg antialiased"
@@ -81,7 +81,7 @@
                     </div>
                 </div>
             </div>
-            <div class="bg-dark w-1/5 h-5/6 border-dashed border-2 border-accentgray rounded-xl mr-5 min-w-min">
+            <div class="bg-dark hidden xl:block w-2/5 h-5/6 border-dashed border-2 border-accentgray rounded-xl mr-5 min-w-min">
                 <div class="flex flex-col items-center pt-5 text-red">
                     <b style="font-size: 1.25rem;">Server Container</b>
                 </div>
