--- a/src/pages/martech-game/index.astro
+++ b/src/pages/martech-game/index.astro
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
         <title>ATA | MarTech Game</title>
         <script
             src="https://cdn.socket.io/4.6.0/socket.io.min.js"
@@ -10,7 +11,7 @@
         <script defer type="module" src="/martech-game.js"></script>
         <link href="/dist/output.css" rel="stylesheet" />
     </head>
-    <body style="overflow: hidden;" class="font-mono text-lg font-bold text-lightgray bg-darkgray">
+    <body style="overflow: hidden; touch-action: manipulation;" class="font-mono text-lg font-bold text-lightgray bg-darkgray">
         <div class="flex items-center justify-center w-screen h-screen">
             <div class="bg-dark hidden xl:block w-2/5 h-5/6 border-dashed border-2 border-accentgray rounded-xl ml-5 min-w-min">
                 <div class="flex flex-col items-center pt-5 text-red">
@@ -34,13 +35,13 @@
                             id="player-input"
                             placeholder="<playerName>"
                             minlength="3"
-                            style="font-size: 3rem;"
+                            style="font-size: 1.75rem;"
                             class="rounded-xl w-3/4 h-1/3 text-center placeholder:italic placeholder:text-fadedgray bg-darkgray outline outline-2 outline-fadedgray focus:outline-red lg:text-base"
                             autocomplete="off"
                             maxlength="18"
                             required
                         />
-                        <button id="play-button" class="w-1/6 rounded-md text-red" style="font-size: 4rem;">Play</button>
+                        <button id="play-button" class="w-1/6 rounded-md text-red" style="font-size: 2rem;">Play</button>
                     </div>
                     <div id="word-container" class="w-full h-4/6 flex flex-col justify-center items-center gap-5">
                         <button
@@ -72,12 +73,20 @@
                     width:50%;
                     background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(100, 100, 100, 0.75), rgba(0, 0, 0, 0));"
                     />
-                    <div id="key-container" class="w-full h-2/6 flex flex-wrap items-center justify-center gap-3 p-5 max-w-xl">
-                        <button
-                            style="width:54px; height: 54px; font-size: 1.5rem; visibility: hidden;"
-                            class="bg-dark outline outline-2 outline-accentgray rounded-lg antialiased"
-                            >?
-                        </button>
+                    <div
+                        id="key-container"
+                        style="touch-action: manipulation;"
+                        class="w-full h-2/6 flex flex-wrap items-center justify-center gap-2 pb-10 max-w-xl"
+                    >
+                        <div id="key-container-1" style="touch-action: manipulation;" class="w-full flex justify-evenly">
+                            <button
+                                class="bg-dark outline outline-2 outline-accentgray rounded-lg antialiased"
+                                style="user-select: none; touch-action: manipulation; width: 1.75rem; height: 3rem; font-size: 1.5rem; visibility: hidden;"
+                                >?</button
+                            >
+                        </div>
+                        <div id="key-container-2" style="touch-action: manipulation;" class="w-full flex justify-evenly"></div>
+                        <div id="key-container-3" style="touch-action: manipulation;" class="w-full flex justify-evenly"></div>
                     </div>
                 </div>
             </div>
