Two More Devlogs, Excuses Excuses

--- a/src/pages/wild-chess-simulator/introduction/roadmap.astro
+++ b/src/pages/wild-chess-simulator/introduction/roadmap.astro
@@ -10,14 +10,14 @@ export let futureRoadmapElements = [
     dateText: "?? / ?? / 2023",
   },
   {
-    titleText: "Working Prototype",
+    titleText: "Working Production Prototype",
     descText: "",
-    dateText: "12 / 06 / 2023",
+    dateText: "12 / 08 / 2023",
   },
   {
-    titleText: "Focus - Simulation Section",
+    titleText: "Parallel Testing - Simulation Section",
     descText: "",
-    dateText: "31 / 05 / 2023",
+    dateText: "31 / 07 / 2023",
   },
 ];
 ---
